# DecMACTP

./: README.md  requirements.txt
BenchMARL/benchmarl/: utils.py
BenchMARL/benchmarl/algorithms/: __init__.py  ignarl.py  magnarl.py
BenchMARL/scripts/: submit.sh  submit_test.sh  test.sh  test_policy.py  test_random.py  train.sh  train_IGNARL.py  train_IPPO.py  train_IQL.py  train_MAGNARL.py  train_VDN.py  train_mappo.py
GNARL-MACTP/: .gitignore  NOTICE  README.md  pyproject.toml  setup.py
GNARL-MACTP/configs/: bellman_ford.yaml  bfs.yaml  ctp.yaml  dfs.yaml  mactp.yaml  mactp2.yaml  mst_prim.yaml  mvc_bc.yaml  mvc_ppo.yaml  rgc_ba_r.yaml  rgc_ba_t.yaml  rgc_er_r.yaml  rgc_er_t.yaml  rgc_we_ba_r.yaml  rgc_we_ba_t.yaml  rgc_we_er_r.yaml  rgc_we_er_t.yaml  tsp_bc.yaml  tsp_ppo.yaml
GNARL-MACTP/gnarl/: __init__.py
GNARL-MACTP/gnarl/agent/: mapolicy.py  policy.py
GNARL-MACTP/gnarl/agent/imitation/: imitation.py
GNARL-MACTP/gnarl/envs/: __init__.py  alg_env.py  clrs_envs.py  ctp_env.py  mactp_env.py  mactp_env2.py  np_envs.py
GNARL-MACTP/gnarl/envs/generate/: data.py  graph_generator.py  sampler.py  specs.py
GNARL-MACTP/gnarl/network/: gnns.py
GNARL-MACTP/gnarl/util/: algorithms.py  bc.py  callbacks.py  classes.py  envs.py  evaluation.py  graph_data.py  graph_format.py  mvc.py  weights_init.py
GNARL-MACTP/scripts/: best_hyperparams_averaged_from_summary.py  eval.py  generate_data.py  run.sh  run_experiments.py  test_ctp_env.py  test_mactp_env.py  test_mactp_policy.py  test_test_dec.py  train.py  train_mactp.py  train_test_Dec.py
(+28 files in other folders)
